--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@rails/webpacker": "5.2.1",
     "turbolinks": "^5.2.0"
   },
+  "scripts": {
+    "be-webpack": "ruby bin/webpack-dev-server"
+  },
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
